Bug#55711 - Agent log rotation : a HUP should rotate the log file  - always close and re-open the log file before ignoring lower message levels